    required dependencies for it happen to be installed.
  * debian/control: Make udev break plymouth (<< 0.9.0-7) as older plymouths
    assume udev implementation details that have changed slightly since v213
  * debian/control: Remove b-d on librwap0-dev
  * debian/control: Bump libkmod-dev b-d to >= 15
  * debian/rules: Drop outdated --enable-tcpwrap

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 10 Aug 2014 10:42:30 +0200

systemd (208-8) UNRELEASED; urgency=medium

  * Fix duplicate line in copyright. (Closes: #756899)

 -- Martin Pitt <mpitt@debian.org>  Thu, 07 Aug 2014 08:31:38 +0200

systemd (208-7) unstable; urgency=medium

  [ Michael Biebl ]
  * Mask remaining services provided by the initscripts package and document
    in more detail why certain services have been masked. (Closes: #659264)
  * Install zsh completions to the correct place. (Closes: #717540)

  [ Jon Severinsson ]
  * Cherry-pick upstream fix for journal file permissions.
  * Map some rcS.d init script dependencies to their systemd equivalent.
  * Update Depends on initscripts to the version with a systemd-compatible
    mountnfs ifup hook. (Closes: #746358)
  * Add Breaks on lvm2 versions without native systemd support.
    (Closes: #678438, #692120)
  * Do not fail udev upgrades if the udev service is already runtime-masked
    when the preinst script is run. (Closes: #755746)
  * Add Pre-Depends on systemd to systemd-sysv, to avoid risking that the
    sysv-compatible symlinks become dangling on a partial install.
  * Ensure that systemctl is usable right after being unpacked, by adding the
    required Pre-Depends to systemd and libsystemd-daemon0. (Closes: #753589)
  * Add support for TuxOnIce hibernation. (Closes: #746463)

  [ Martin Pitt ]
  * Rename "api" autopkgtest to "build-login", and stop requiring that
    sd_login_monitor_new() succeeds. It doesn't in many environments like
    schroot or after upgrades from < 204, and the main point of the test is