@@ -28,6 +28,8 @@ systemd (214-1) UNRELEASED; urgency=medium
   * debian/control: Remove b-d on librwap0-dev
   * debian/control: Bump libkmod-dev b-d to >= 15
   * debian/rules: Drop outdated --enable-tcpwrap
+  * debian/rules: Explicitely turn off rfkill, networkd, timesyncd and resolved
+    for the udeb build
 
  -- Sjoerd Simons <sjoerd@debian.org>  Sun, 10 Aug 2014 10:42:30 +0200
 
